# NuCSI

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PIP_INSTALLATION_GUIDE.md  README.md  configs.yaml  nucsi.py  pyproject.toml  requirements.txt  setup.py  setup.sh
inputs/plasmid/: 20.fasta
inputs/plasmid/20/: 30_bp.fasta
nucsi/: __init__.py  nucsi.py
scripts/: map_to_plasmid.py  scan_sequences.py
