[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nucsi"
dynamic = ["version"]
description = "Nuclease Cleavage Site Identification Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matthew Penner", email = "matthew.penner@crick.ac.uk"}
]
maintainers = [
    {name = "Matthew Penner", email = "matthew.penner@crick.ac.uk"}
]
keywords = ["bioinformatics", "nuclease", "cleavage", "sequencing", "coverage", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0",
    "biopython>=1.79.0",
    "pysam>=0.19.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "logomaker>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/Matt115A/NuCSI"
Documentation = "https://github.com/Matt115A/NuCSI#readme"
Repository = "https://github.com/Matt115A/NuCSI"
"Bug Tracker" = "https://github.com/Matt115A/NuCSI/issues"

[project.scripts]
nucsi = "nucsi.nucsi:main"

[tool.setuptools]
packages = ["nucsi"]

[tool.setuptools.package-data]
nucsi = ["scripts/*.py"]

[tool.setuptools_scm]
write_to = "nucsi/_version.py" 